<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:fillViewport="true">

	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@color/black"
		tools:context=".movie.MovieActivity">

		<ImageView
			android:id="@+id/imageView"
			android:layout_width="0dp"
			android:layout_height="280dp"
			android:contentDescription="@string/movie_image_content_description"
			android:scaleType="centerCrop"
			android:src="@drawable/endgame"
			app:layout_constraintDimensionRatio="w,16:9"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent" />

		<TextView
			android:id="@+id/tvGreeting"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:background="#B34C4949"
			android:padding="8dp"
			android:textColor="@color/white"
			android:textSize="32sp"
			android:textStyle="bold"
			app:layout_constraintBottom_toBottomOf="@+id/imageView"
			app:layout_constraintStart_toStartOf="parent"
			tools:text="Hey! User" />

		<ImageButton
			android:id="@+id/buttonClose"
			android:layout_width="28dp"
			android:layout_height="28dp"
			android:layout_marginTop="16dp"
			android:layout_marginEnd="16dp"
			android:background="@drawable/selector_background_circle"
			android:contentDescription="@string/close_button"
			android:padding="28dp"
			android:src="@drawable/ic_close"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toTopOf="parent" />

		<TextView
			android:id="@+id/tvMovieName"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="8dp"
			android:layout_marginTop="8dp"
			android:textColor="@color/white"
			android:textSize="16sp"
			android:textStyle="bold"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/imageView"
			tools:text="Avenger: Endgame" />

		<TextView
			android:id="@+id/tvDuration"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textColor="@color/white"
			android:textSize="14sp"
			app:layout_constraintStart_toStartOf="@+id/tvMovieName"
			app:layout_constraintTop_toBottomOf="@+id/tvMovieName"
			tools:text="100 minutes" />

		<com.google.android.material.button.MaterialButton
			android:id="@+id/materialButton"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginHorizontal="8dp"
			android:layout_marginTop="8dp"
			android:backgroundTint="@color/white"
			android:text="@string/play"
			android:textColor="@color/black"
			app:icon="@drawable/ic_play"
			app:iconGravity="textStart"
			app:iconTint="@color/black"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/tvDuration" />

		<com.google.android.material.button.MaterialButton
			android:id="@+id/materialButton2"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:backgroundTint="#454545"
			android:text="@string/download"
			app:icon="@drawable/ic_arrow_down"
			app:iconGravity="textStart"
			app:layout_constraintEnd_toEndOf="@+id/materialButton"
			app:layout_constraintStart_toStartOf="@+id/materialButton"
			app:layout_constraintTop_toBottomOf="@+id/materialButton" />

		<TextView
			android:id="@+id/textView2"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginTop="8dp"
			android:text="@string/dummy_description"
			android:textColor="@color/white"
			app:layout_constraintEnd_toEndOf="@id/materialButton2"
			app:layout_constraintStart_toStartOf="@+id/materialButton2"
			app:layout_constraintTop_toBottomOf="@+id/materialButton2" />

		<com.google.android.material.button.MaterialButton
			android:id="@+id/buttonMyList"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="8dp"
			android:backgroundTint="@android:color/transparent"
			android:text="@string/my_list"
			app:icon="@drawable/ic_add"
			app:iconGravity="top"
			app:layout_constraintStart_toStartOf="@+id/textView2"
			app:layout_constraintTop_toBottomOf="@+id/textView2" />

		<com.google.android.material.button.MaterialButton
			android:id="@+id/buttonRate"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="8dp"
			android:backgroundTint="@android:color/transparent"
			android:text="@string/rate"
			app:icon="@drawable/ic_thumb_up"
			app:iconGravity="top"
			app:layout_constraintStart_toEndOf="@+id/buttonMyList"
			app:layout_constraintTop_toBottomOf="@+id/textView2" />

		<com.google.android.material.button.MaterialButton
			android:id="@+id/buttonShare"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="8dp"
			android:backgroundTint="@android:color/transparent"
			android:text="@string/share"
			app:icon="@drawable/ic_share"
			app:iconGravity="top"
			app:layout_constraintStart_toEndOf="@+id/buttonRate"
			app:layout_constraintTop_toBottomOf="@+id/textView2" />

	</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
