<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/black"
	tools:context=".LoginActivity">

	<TextView
		android:id="@+id/tvNetflix"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="8dp"
		android:gravity="center_horizontal"
		android:maxLines="1"
		android:text="@string/netflix"
		android:textAllCaps="true"
		android:textColor="@color/red"
		android:textSize="52sp"
		android:textStyle="bold"
		app:layout_constraintBottom_toTopOf="@+id/linearLayout"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent" />

	<LinearLayout
		android:id="@+id/linearLayout"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginHorizontal="16dp"
		android:orientation="vertical"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent">

		<com.google.android.material.textfield.TextInputLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<com.google.android.material.textfield.TextInputEditText
				android:id="@+id/editTextUsername"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/username" />

		</com.google.android.material.textfield.TextInputLayout>

		<com.google.android.material.textfield.TextInputLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="8dp"
			app:endIconMode="password_toggle">

			<com.google.android.material.textfield.TextInputEditText
				android:id="@+id/editTextPassword"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/password"
				android:inputType="textPassword" />

		</com.google.android.material.textfield.TextInputLayout>

		<CheckBox
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="Remember username and password"
			android:textColor="@color/white" />

		<Button
			android:id="@+id/buttonSubmit"
			android:layout_width="180dp"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:layout_marginTop="8dp"
			android:backgroundTint="@color/red"
			android:text="Submit" />

	</LinearLayout>

	<ProgressBar
		android:id="@+id/progressBar"
		android:layout_width="60dp"
		android:layout_height="60dp"
		android:layout_marginTop="8dp"
		android:visibility="gone"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/linearLayout"
		tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>
